--- a/BitzenApp/Views/Shared/_layout.cshtml
+++ b/BitzenApp/Views/Shared/_layout.cshtml
@@ -48,8 +48,7 @@
             <div id="barraLateral" class="sidebar sidebar-dark bg-dark d-print-none">
                 <ul class="list-unstyled">
                     <li>
-                        <a asp-area="" asp-controller="Pessoa" asp-action="Index"><i class="fa fa-fw fa-car"></i> Veículos</a>                       
-
+                        <a asp-area="" asp-controller="Veiculo" asp-action="Index"><i class="fa fa-fw fa-car"></i> Veículos</a>                       
                     </li>
                 </ul>
             </div>
