--- a/BitzenApp/Views/Shared/_layout.cshtml
+++ b/BitzenApp/Views/Shared/_layout.cshtml
@@ -49,6 +49,7 @@
                 <ul class="list-unstyled">
                     <li>
                         <a asp-area="" asp-controller="Veiculo" asp-action="Index"><i class="fa fa-fw fa-car"></i> Veículos</a>                       
+                        <a asp-area="" asp-controller="Abastecimento" asp-action="Index"><i class="fa fa-fw fa-gas-pump"></i> Abastecimento</a>                       
                     </li>
                 </ul>
             </div>
