--- a/BitzenApp/Views/Auth/Login.cshtml
+++ b/BitzenApp/Views/Auth/Login.cshtml
@@ -30,7 +30,7 @@
                         <form method="post">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fa fa-user"></i></span>
+                                    <span class="input-group-text"><i class="fa fa-envelope"></i></span>
                                 </div>
                                 <input type="text" class="form-control" asp-for="CEmail" id="txtEmail" placeholder="Email" maxlength="100">
                             </div>
